syntax = "proto3";
package axelar.snapshot.exported.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/snapshot/exported";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "cosmos/base/v1beta1/coin.proto";
import "axelar/tss/exported/v1beta1/types.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/staking/v1beta1/staking.proto";

option (gogoproto.goproto_getters_all) = false;

message Validator {
  google.protobuf.Any sdk_validator = 1 [
    (cosmos_proto.accepts_interface) = "exported.SDKValidator",
    (gogoproto.customname) = "SDKValidator"
  ];
  int64 share_count = 2;
}

message Participant {
  bytes address = 1 [ (gogoproto.casttype) =
                          "github.com/cosmos/cosmos-sdk/types.ValAddress" ];
  bytes weight = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
}

message Snapshot {
  option (gogoproto.stable_marshaler) = true;

  repeated Validator validators = 1
      [ (gogoproto.nullable) = false, deprecated = true ];
  bytes total_share_count = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    deprecated = true
  ];
  int64 counter = 5 [ deprecated = true ];
  tss.exported.v1beta1.KeyShareDistributionPolicy
      key_share_distribution_policy = 6 [ deprecated = true ];
  int64 corruption_threshold = 7 [ deprecated = true ];

  google.protobuf.Timestamp timestamp = 2
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];
  int64 height = 3;
  map<string, Participant> participants = 8 [ (gogoproto.nullable) = false ];
  bytes bonded_weight = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
}

enum ValidatorIllegibility {
  option (gogoproto.goproto_enum_prefix) = false;
  option (gogoproto.goproto_enum_stringer) = false;

  // these enum values are used for bitwise operations, therefore they need to
  // be powers of 2
  VALIDATOR_ILLEGIBILITY_UNSPECIFIED = 0
      [ (gogoproto.enumvalue_customname) = "None" ];
  VALIDATOR_ILLEGIBILITY_TOMBSTONED = 1
      [ (gogoproto.enumvalue_customname) = "Tombstoned" ];
  VALIDATOR_ILLEGIBILITY_JAILED = 2
      [ (gogoproto.enumvalue_customname) = "Jailed" ];
  VALIDATOR_ILLEGIBILITY_MISSED_TOO_MANY_BLOCKS = 4
      [ (gogoproto.enumvalue_customname) = "MissedTooManyBlocks" ];
  VALIDATOR_ILLEGIBILITY_NO_PROXY_REGISTERED = 8
      [ (gogoproto.enumvalue_customname) = "NoProxyRegistered" ];
  VALIDATOR_ILLEGIBILITY_TSS_SUSPENDED = 16
      [ (gogoproto.enumvalue_customname) = "TssSuspended" ];
  VALIDATOR_ILLEGIBILITY_PROXY_INSUFICIENT_FUNDS = 32
      [ (gogoproto.enumvalue_customname) = "ProxyInsuficientFunds" ];
}
