syntax = "proto3";
package axelar.snapshot.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/snapshot/types";

import "gogoproto/gogo.proto";
import "axelar/snapshot/v1beta1/params.proto";
import "axelar/snapshot/v1beta1/types.proto";

option (gogoproto.goproto_getters_all) = false;

// GenesisState represents the genesis state
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];

  repeated ProxiedValidator proxied_validators = 2
      [ (gogoproto.nullable) = false ];
}
